5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4150/executions/1863_1288.log
== TEST (2019-07-02 10:18:45) 
-- CODE:
from numpy import*
from numpy.linalg import*

vet = array(eval(inpu("digite: ")))

x = array([[5,6,5,15],[10,10,50,20],[10,100,20,40],[100,30,20,35]])

y = dot(inv(x, vet.T)
		  
print("titica : ", round(vi[0],0))
print("barro no balde: ",round(vi[1],0))
print("bestrume: ",round(vi[2]),0)
print("caca de vaca: ",round(vi[3],0))

-- ERROR:
File "XXXX", line 10
    print("titica : ", round(vi[0],0))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 10:19:36) 
-- CODE:
from numpy import*
from numpy.linalg import*

vet = array(eval(inpu("digite: ")))

x = array([[5,6,5,15],[10,10,50,20],[10,100,20,40],[100,30,20,35]])

y = dot(inv(x, vet.T)
		  
print("titica : ", round(y[0],0))
print("barro no balde: ",round(y[1],0))
print("bestrume: ",round(y[2]),0)
print("caca de vaca: ",round(y[3],0))

-- ERROR:
File "XXXX", line 10
    print("titica : ", round(y[0],0))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 10:19:41) 
-- CODE:
from numpy import*
from numpy.linalg import*

vet = array(eval(inpu("digite: ")))

x = array([[5,6,5,15],[10,10,50,20],[10,100,20,40],[100,30,20,35]])

y = dot(inv(x, vet.T)
		  
print("titica : ", round(y[0],0))
print("barro no balde: ",round(y[1],0))
print("bestrume: ",round(y[2]),0)
print("caca de vaca: ",round(y[3],0))

-- ERROR:
File "XXXX", line 10
    print("titica : ", round(y[0],0))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 10:19:43) 
-- CODE:
from numpy import*
from numpy.linalg import*

vet = array(eval(inpu("digite: ")))

x = array([[5,6,5,15],[10,10,50,20],[10,100,20,40],[100,30,20,35]])

y = dot(inv(x, vet.T)
		  
print("titica : ", round(y[0],0))
print("barro no balde: ",round(y[1],0))
print("bestrume: ",round(y[2]),0)
print("caca de vaca: ",round(y[3],0))

-- ERROR:
File "XXXX", line 10
    print("titica : ", round(y[0],0))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 10:21:27) 
-- CODE:
from numpy import*
from numpy.linalg import*

vet = array(eval(inpu("digite: ")))

x = array([[5,6,5,15],[10,10,50,20],[10,100,20,40],[100,30,20,35]])

y = dot(inv(x, vet.T)
		  
print("titica : ", round(y[0], 0))
print("barro no balde: ", round(y[1], 0))
print("bestrume: ", round(y[2]), 0)
print("caca de vaca: ", round(y[3], 0))

-- ERROR:
File "XXXX", line 10
    print("titica : ", round(y[0], 0))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 10:21:32) 
-- CODE:
from numpy import*
from numpy.linalg import*

vet = array(eval(inpu("digite: ")))

x = array([[5,6,5,15],[10,10,50,20],[10,100,20,40],[100,30,20,35]])

y = dot(inv(x, vet.T)
		  
print("titica : ", round(y[0], 0))
print("barro no balde: ", round(y[1], 0))
print("bestrume: ", round(y[2]), 0)
print("caca de vaca: ", round(y[3], 0))

-- ERROR:
File "XXXX", line 10
    print("titica : ", round(y[0], 0))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 10:21:33) 
-- CODE:
from numpy import*
from numpy.linalg import*

vet = array(eval(inpu("digite: ")))

x = array([[5,6,5,15],[10,10,50,20],[10,100,20,40],[100,30,20,35]])

y = dot(inv(x, vet.T)
		  
print("titica : ", round(y[0], 0))
print("barro no balde: ", round(y[1], 0))
print("bestrume: ", round(y[2]), 0)
print("caca de vaca: ", round(y[3], 0))

-- ERROR:
File "XXXX", line 10
    print("titica : ", round(y[0], 0))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 10:21:34) 
-- CODE:
from numpy import*
from numpy.linalg import*

vet = array(eval(inpu("digite: ")))

x = array([[5,6,5,15],[10,10,50,20],[10,100,20,40],[100,30,20,35]])

y = dot(inv(x, vet.T)
		  
print("titica : ", round(y[0], 0))
print("barro no balde: ", round(y[1], 0))
print("bestrume: ", round(y[2]), 0)
print("caca de vaca: ", round(y[3], 0))

-- ERROR:
File "XXXX", line 10
    print("titica : ", round(y[0], 0))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 10:21:35) 
-- CODE:
from numpy import*
from numpy.linalg import*

vet = array(eval(inpu("digite: ")))

x = array([[5,6,5,15],[10,10,50,20],[10,100,20,40],[100,30,20,35]])

y = dot(inv(x, vet.T)
		  
print("titica : ", round(y[0], 0))
print("barro no balde: ", round(y[1], 0))
print("bestrume: ", round(y[2]), 0)
print("caca de vaca: ", round(y[3], 0))

-- ERROR:
File "XXXX", line 10
    print("titica : ", round(y[0], 0))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 10:25:08) 
-- CODE:
from numpy import*
from numpy.linalg import*

vet = array(eval(inpu("digite: ")))

x = array([[5,6,5,15],[10,10,50,20],[10,100,20,40],[100,30,20,35]])

y = dot(inv(x, vet.T)
		  
print("titica : ", round(y[0], 0))
print("barro no balde: ", round(y[1], 0))
print("bestrume: ", round(y[2]), 0)
print("caca de vaca: ", round(y[3], 0))
		  
if y[0] == min(y):
	print("titica")
elif y[1] == min(y):
	print("barro no balde")
elif y[2] == min(y):
	print("bestrume")
else:
	print("caca de vaca")
-- ERROR:
File "XXXX", line 10
    print("titica : ", round(y[0], 0))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 10:26:17) 
-- CODE:
from numpy import*
from numpy.linalg import*

vet = array(eval(inpu("digite: ")))

x = array([[5,6,5,15],[10,10,50,20],[10,100,20,40],[100,30,20,35]])

vi = dot(inv(x, vet.T)
		  
print("titica: ", round(vi[0], 0))
print("barro no balde: ", round(vi[1], 0))
print("bestrume: ", round(vi[2]), 0)
print("caca de vaca: ", round(vi[3], 0))
		  
if vi[0] == min(vi):
	print("titica")
elif vi[1] == min(vi):
	print("barro no balde")
elif vi[2] == min(vi):
	print("bestrume")
else:
	print("caca de vaca")
-- ERROR:
File "XXXX", line 10
    print("titica: ", round(vi[0], 0))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 10:26:41) 
-- CODE:
from numpy import*
from numpy.linalg import*

vet = array(eval(input("digite: ")))

x = array([[5,6,5,15],[10,10,50,20],[10,100,20,40],[100,30,20,35]])

vi = dot(inv(x, vet.T)
		  
print("titica: ", round(vi[0], 0))
print("barro no balde: ", round(vi[1], 0))
print("bestrume: ", round(vi[2]), 0)
print("caca de vaca: ", round(vi[3], 0))
		  
if vi[0] == min(vi):
	print("titica")
elif vi[1] == min(vi):
	print("barro no balde")
elif vi[2] == min(vi):
	print("bestrume")
else:
	print("caca de vaca")
-- ERROR:
File "XXXX", line 10
    print("titica: ", round(vi[0], 0))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 10:26:45) 
-- CODE:
from numpy import*
from numpy.linalg import*

vet = array(eval(input("digite: ")))

x = array([[5,6,5,15],[10,10,50,20],[10,100,20,40],[100,30,20,35]])

vi = dot(inv(x, vet.T)
		  
print("titica: ", round(vi[0], 0))
print("barro no balde: ", round(vi[1], 0))
print("bestrume: ", round(vi[2]), 0)
print("caca de vaca: ", round(vi[3], 0))
		  
if vi[0] == min(vi):
	print("titica")
elif vi[1] == min(vi):
	print("barro no balde")
elif vi[2] == min(vi):
	print("bestrume")
else:
	print("caca de vaca")
-- ERROR:
File "XXXX", line 10
    print("titica: ", round(vi[0], 0))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 10:27:47) 
-- CODE:
from numpy import*
from numpy.linalg import*

vet = array(eval(input("digite: ")))

x = array([[5,6,5,15],[10,10,50,20],[10,100,20,40],[100,30,20,35]])

vi = dot(inv(x), vet.T)
		  
print("titica: ", round(vi[0], 0))
print("barro no balde: ", round(vi[1], 0))
print("bestrume: ", round(vi[2]), 0)
print("caca de vaca: ", round(vi[3], 0))
		  
if vi[0] == min(vi):
	print("titica")
elif vi[1] == min(vi):
	print("barro no balde")
elif vi[2] == min(vi):
	print("bestrume")
else:
	print("caca de vaca")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 10:28:06) 
-- CODE:
from numpy import*
from numpy.linalg import*

vet = array(eval(input("digite: ")))

x = array([[5,6,5,15],[10,10,50,20],[10,100,20,40],[100,30,20,35]])

vi = dot(inv(x), vet.T)
		  
print("titica: ", round(vi[0], 0))
print("barro no balde: ", round(vi[1], 0))
print("bestrume: ", round(vi[2]), 0)
print("caca de vaca: ", round(vi[3], 0))
		  
if vi[0] == min(vi):
	print("titica")
elif vi[1] == min(vi):
	print("barro no balde")
elif vi[2] == min(vi):
	print("bestrume")
else:
	print("caca de vaca")
-- EXECUTION TIME:
0.951834
-- TEST CASE 1:
---- input:
[186070,341000,741570,1368195]
---- correct output:
titica: 9875.0
barro no balde: 3215.0
bestrume: 1236.0
caca de vaca: 7415.0
bestrume
---- user output:
titica:  9875.0
barro no balde:  3215.0
bestrume:  1236.0 0
caca de vaca:  7415.0
bestrume
-- TEST CASE 2:
---- input:
[12849,62280,94710,77025]
---- correct output:
titica: 321.0
barro no balde: 654.0
bestrume: 987.0
caca de vaca: 159.0
caca de vaca
---- user output:
titica:  321.0
barro no balde:  654.0
bestrume:  987.0 0
caca de vaca:  159.0
caca de vaca
-- TEST CASE 3:
---- input:
[12111,51660,75450,52995]
---- correct output:
titica: 123.0
barro no balde: 456.0
bestrume: 789.0
caca de vaca: 321.0
titica
---- user output:
titica:  123.0
barro no balde:  456.0
bestrume:  789.0 0
caca de vaca:  321.0
titica
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 10:28:17) 
-- CODE:
from numpy import*
from numpy.linalg import*

vet = array(eval(input("digite: ")))

x = array([[5,6,5,15],[10,10,50,20],[10,100,20,40],[100,30,20,35]])

vi = dot(inv(x), vet.T)
		  
print("titica: ", round(vi[0], 0))
print("barro no balde: ", round(vi[1], 0))
print("bestrume: ", round(vi[2]), 0)
print("caca de vaca: ", round(vi[3], 0))
		  
if vi[0] == min(vi):
	print("titica")
elif vi[1] == min(vi):
	print("barro no balde")
elif vi[2] == min(vi):
	print("bestrume")
else:
	print("caca de vaca")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 10:30:00) 
-- CODE:
from numpy import*
from numpy.linalg import*

vet = array(eval(input("digite: ")))

x = array([[5,6,5,15],[10,10,50,20],[10,100,20,40],[100,30,20,35]])

vi = dot(inv(x), vet.T)
		  
print("titica: ", round(vi[0], 0))
print("barro no balde: ", round(vi[1], 0))
print("bestrume: ", round(vi[2]), 0)
print("caca de vaca: ", round(vi[3], 0))
		  
if vi[0] == min(vi):
	print("titica")
elif vi[1] == min(vi):
	print("barro no balde")
elif vi[2] == min(vi):
	print("bestrume")
else:
	print("caca de vaca")
-- EXECUTION TIME:
1.08566
-- TEST CASE 1:
---- input:
[186070,341000,741570,1368195]
---- correct output:
titica: 9875.0
barro no balde: 3215.0
bestrume: 1236.0
caca de vaca: 7415.0
bestrume
---- user output:
titica:  9875.0
barro no balde:  3215.0
bestrume:  1236.0 0
caca de vaca:  7415.0
bestrume
-- TEST CASE 2:
---- input:
[12849,62280,94710,77025]
---- correct output:
titica: 321.0
barro no balde: 654.0
bestrume: 987.0
caca de vaca: 159.0
caca de vaca
---- user output:
titica:  321.0
barro no balde:  654.0
bestrume:  987.0 0
caca de vaca:  159.0
caca de vaca
-- TEST CASE 3:
---- input:
[12111,51660,75450,52995]
---- correct output:
titica: 123.0
barro no balde: 456.0
bestrume: 789.0
caca de vaca: 321.0
titica
---- user output:
titica:  123.0
barro no balde:  456.0
bestrume:  789.0 0
caca de vaca:  321.0
titica
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 10:30:18) 
-- CODE:
from numpy import*
from numpy.linalg import*

vet = array(eval(input("digite: ")))

x = array([[5,6,5,15],[10,10,50,20],[10,100,20,40],[100,30,20,35]])

vi = dot(inv(x), vet.T)
		  
print("titica: ", round(vi[0], 0))
print("barro no balde: ", round(vi[1], 0))
print("bestrume: ", round(vi[2]), 0)
print("caca de vaca: ", round(vi[3], 0))
		  
if vi[0] == min(vi):
	print("titica")
elif vi[1] == min(vi):
	print("barro no balde")
elif vi[2] == min(vi):
	print("bestrume")
else:
	print("caca de vaca")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 10:30:36) 
-- CODE:
from numpy import*
from numpy.linalg import*

vet = array(eval(input("digite: ")))

x = array([[5,6,5,15],[10,10,50,20],[10,100,20,40],[100,30,20,35]])

vi = dot(inv(x), vet.T)
		  
print("titica: ", round(vi[0], 0))
print("barro no balde: ", round(vi[1], 0))
print("bestrume: ", round(vi[2]), 0)
print("caca de vaca: ", round(vi[3], 0))
		  
if vi[0] == min(vi):
	print("titica")
elif vi[1] == min(vi):
	print("barro no balde")
elif vi[2] == min(vi):
	print("bestrume")
else:
	print("caca de vaca")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 10:32:02) 
-- CODE:
from numpy import*
from numpy.linalg import*

vet = array(eval(input("digite: ")))

x = array([[5,6,5,15],[10,10,50,20],[10,100,20,40],[100,30,20,35]])

vi = dot(inv(x), vet.T)
		  
print("titica: ", round(vi[0], 0))
print("barro no balde: ", round(vi[1], 0))
print("bestrume: ", round(vi[2], 0))
print("caca de vaca: ", round(vi[3], 0))
		  
if vi[0] == min(vi):
	print("titica")
elif vi[1] == min(vi):
	print("barro no balde")
elif vi[2] == min(vi):
	print("bestrume")
else:
	print("caca de vaca")
-- EXECUTION TIME:
1.0862
-- TEST CASE 1:
---- input:
[186070,341000,741570,1368195]
---- correct output:
titica: 9875.0
barro no balde: 3215.0
bestrume: 1236.0
caca de vaca: 7415.0
bestrume
---- user output:
titica:  9875.0
barro no balde:  3215.0
bestrume:  1236.0
caca de vaca:  7415.0
bestrume
-- TEST CASE 2:
---- input:
[12849,62280,94710,77025]
---- correct output:
titica: 321.0
barro no balde: 654.0
bestrume: 987.0
caca de vaca: 159.0
caca de vaca
---- user output:
titica:  321.0
barro no balde:  654.0
bestrume:  987.0
caca de vaca:  159.0
caca de vaca
-- TEST CASE 3:
---- input:
[12111,51660,75450,52995]
---- correct output:
titica: 123.0
barro no balde: 456.0
bestrume: 789.0
caca de vaca: 321.0
titica
---- user output:
titica:  123.0
barro no balde:  456.0
bestrume:  789.0
caca de vaca:  321.0
titica
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
